Implement DI for ItemsRepository and use settings

--- a/Play.Catalog/src/Play.Catalog.Service/appsettings.Development.json
+++ b/Play.Catalog/src/Play.Catalog.Service/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ServiceSettings":{
+    "ServiceName": "Catalog"
+  },
+  "MongoDbSettings":{
+    "Host": "localhost",
+    "Port": "27017"
   }
 }
